- fix overflowing descriptions

--- a/src/components/styles/card.module.scss
+++ b/src/components/styles/card.module.scss
@@ -54,6 +54,10 @@
   height: 180px;
 }
 
+.description {
+  word-break: break-all;
+}
+
 .content {
   display: flex;
   flex-direction: column;
